objects/sf_devops__Environment__c.object
<CustomObject>
    <description>An environment represents a place where changes are made.</description>
    <fields>
        <fullName>sf_devops__Can_Track_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag to denote if this environment has been configured to track changes.  If this is true, then this environment can be associated with a work item.</description>
        <label>Can Track Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this environment is no longer used by the dev ops center</description>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Last_Revision_Counter__c</fullName>
        <description>This stores the last revision counter that was queried from the source members in the development environment that we represent.</description>
        <label>Last Revision Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf_devops__Named_Credential__c</fullName>
        <description>The DeveloperName value of the NamedCredential to use to connect to this environment.</description>
        <label>Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Operation_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field references the AOR for the back sync operation.</description>
        <label>Operation Result</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Org_Id__c</fullName>
        <externalId>true</externalId>
        <label>Organization Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Project__c</fullName>
        <description>The Project this Environment is associated with.</description>
        <label>Project</label>
        <referenceTo>sf_devops__Project__c</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_devops__Refresh_Date__c</fullName>
        <description>The Datetime when this environment was refreshed</description>
        <label>Refresh Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf_devops__Refresh_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The environment that this environment was refreshed from.</description>
        <label>Refresh Source</label>
        <referenceTo>sf_devops__Environment__c</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>Refreshed_Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Replaces__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the Environment that this environment replaces in the DevOps center.</description>
        <label>Replaces</label>
        <referenceTo>sf_devops__Environment__c</referenceTo>
        <relationshipLabel>Replaces</relationshipLabel>
        <relationshipName>Replaces_Bys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Test_Environment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, this environment is on test instance, and auth should be performed at test.salesforce.com (not login.salesforce.com)</description>
        <label>Test Environment</label>
        <type>Checkbox</type>
    </fields>
    <label>Environment</label>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sf_devops__Expired_Changed</fullName>
        <active>true</active>
        <description>An Environment cannot have its Expired__c field set to false.</description>
        <errorConditionFormula>AND(NOT(sf_devops__Expired__c), ISCHANGED(sf_devops__Expired__c))</errorConditionFormula>
        <errorMessage>An Environment cannot have its Expired__c field set to false.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Expired_Insert</fullName>
        <active>true</active>
        <description>An Environment cannot be inserted with Expired__c set to true.</description>
        <errorConditionFormula>AND(sf_devops__Expired__c, ISNEW())</errorConditionFormula>
        <errorMessage>An Environment cannot be inserted with Expired__c set to true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Expired_Replaces</fullName>
        <active>true</active>
        <description>A replacement Environment must be expired.</description>
        <errorConditionFormula>AND(OR(ISNEW(),ISCHANGED(sf_devops__Replaces__c)), NOT(sf_devops__Replaces__r.sf_devops__Expired__c))</errorConditionFormula>
        <errorMessage>A replacement Environment must be expired.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Refresh_Source_And_Date</fullName>
        <active>true</active>
        <description>Verify both Refresh_Source and Refresh_Date are set, or both are empty</description>
        <errorConditionFormula>AND(
    OR(ISNEW(), ISCHANGED(sf_devops__Refresh_Source__c), ISCHANGED(sf_devops__Refresh_Date__c)),
     ISBLANK( sf_devops__Refresh_Date__c )  &lt;&gt;  ISBLANK( sf_devops__Refresh_Source__c ) 
  )</errorConditionFormula>
        <errorMessage>Refresh_Source and Refresh_Date most both be set, or both be empty.</errorMessage>
    </validationRules>
</CustomObject>